--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
               </form>  
               
             <form method='POST' action-"/">
-                <button class="btn btn-secondary btn-lg" type="submit" value="MODEL" name="GetModel">Get Genre </button>
+                <button class="btn btn-secondary btn-lg" type="submit" value="GENRE" name="GetGenre">Get Genre </button>
                 
             </form>
             <br>
