feat: added frontend codes

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,9 +12,9 @@
             <form method="post" action="/" enctype="multipart/form-data">
                 <p>  <input type="file" name="files"/> </p>
                 <p>  <input type="submit" name="submit" class="btn btn-success btn-lg" value="UPLOAD"/> </p>
-              </form>  
+              </form>
               
-            <form method='POST' action-"/">
+            <form method='POST' action="/">
                 <button class="btn btn-secondary btn-lg" type="submit" value="GENRE" name="GetGenre">Get Genre </button>
                 
             </form>
